Fix card view twelve- align item in the center

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-/* @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,400&family=Syne&display=swap"); */
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;1,400&family=Syne&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
 
 html,
@@ -149,7 +149,7 @@ div .link.link-two {
   top: 25px;
   text-decoration: none;
   font-weight: bold;
-  font-size: 16px;
+  font-size: 15px;
   color: black;
 }
 
@@ -163,12 +163,12 @@ div .link.link-two {
 .cardFive,
 .card.cardSix,
 .cardNine,
+.card.cardTwelve,
 .card.cardTen {
   position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
   background-size: cover;
   background-repeat: no-repeat;
 }
@@ -179,7 +179,7 @@ div .link.link-two {
 .card.cardSix p,
 .card.cardTen p,
 .card.cardTwelve a {
-  position: absolute;
+  /* position: absolute; */
   top: 25px;
   text-decoration: none;
   font-weight: bold;
@@ -322,10 +322,10 @@ ul {
   color: black;
 }
 
-.card.card.cardTwelve img {
+/* .card.card.cardTwelve img {
   max-height: 100%;
   max-width: 100%;
-}
+} */
 
 /* ---about page--- */
 .page {
